# secure-multitenant-rag

./: .gitignore
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: chat.py  health.py  sync.py
backend/app/data/documents/: vacation_policy.txt
backend/app/llm/: llm.py
backend/app/models/: schemas.py
backend/app/rag/: bm25_index.py  chunker.py  embeddings.py  gdrive_loader.py  generator.py  loader.py  reranker.py  retriever.py  vector_store.py
backend/app/scripts/: sync_gdrive.py
backend/app/security/: llm_client.py  logger.py  prompt_scanner.py  schemas.py
backend/app/services/: chat_service.py
backend/chroma_db/: chroma.sqlite3
backend/scripts/: interactive_chat.py
backend/tests/: test_api.py  test_chunker.py  test_embeddings.py  test_gdrive.py  test_generator.py  test_llm.py  test_loader.py  test_reranker.py  test_retriever.py  test_vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.tsx  PerformanceChip.tsx  Sidebar.tsx  SourceCard.tsx
frontend/src/components/admin/: MetricsGrid.tsx  RequestTable.tsx  SecurityTable.tsx
frontend/src/pages/: AdminPage.tsx  UserPage.tsx
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts
