[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "docx>=0.2.4",
    "groq>=1.5.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
